@@ -2,7 +2,7 @@
 // $Id$
 //
 // Narya library - tools for developing networked games
-// Copyright (C) 2002-2005 Three Rings Design, Inc., All Rights Reserved
+// Copyright (C) 2002-2006 Three Rings Design, Inc., All Rights Reserved
 // http://www.threerings.net/code/narya/
 //
 // This library is free software; you can redistribute it and/or modify it
@@ -65,6 +65,7 @@ public class LocationMarshaller extends InvocationMarshaller
 
             default:
                 super.dispatchResponse(methodId, args);
+                return;
             }
         }
     }
@@ -89,7 +90,7 @@ public class LocationMarshaller extends InvocationMarshaller
         LocationMarshaller.MoveMarshaller listener3 = new LocationMarshaller.MoveMarshaller();
         listener3.listener = arg3;
         sendRequest(arg1, MOVE_TO, new Object[] {
-            new Integer(arg2), listener3
+            Integer.valueOf(arg2), listener3
         });
     }
 
