@@ -1,5 +1,5 @@
 //
-// $Id: MapFileTileSetIDBroker.java,v 1.8 2004/08/27 02:12:44 mdb Exp $
+// $Id$
 //
 // Narya library - tools for developing networked games
 // Copyright (C) 2002-2004 Three Rings Design, Inc., All Rights Reserved
@@ -93,7 +93,7 @@ public class MapFileTileSetIDBroker implements TileSetIDBroker
     {
         Integer tsid = (Integer)_map.get(tileSetName);
         if (tsid == null) {
-            tsid = new Integer(++_nextTileSetID);
+            tsid = Integer.valueOf(++_nextTileSetID);
             _map.put(tileSetName, tsid);
         }
         return tsid.intValue();
